--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   intl: ^0.18.1
   flutter_custom_clippers: ^2.1.0
+  sqflite: ^2.0.0+3
+  path_provider: ^2.0.5
 
 dev_dependencies:
   flutter_test:
