--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,7 @@ dependencies:
   flutter_custom_clippers: ^2.1.0
   sqflite: ^2.0.0+3
   path_provider: ^2.0.5
-
+  pdf: ^3.6.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
