--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   sqflite: ^2.0.0+3
   path_provider: ^2.0.5
   pdf: ^3.6.0
+  external_path: ^1.0.3
 dev_dependencies:
   flutter_test:
     sdk: flutter
