--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   path_provider: ^2.0.5
   pdf: ^3.6.0
   external_path: ^1.0.3
+  flutter_local_notifications: ^15.1.0+1
+  permission_handler: ^10.4.3
 dev_dependencies:
   flutter_test:
     sdk: flutter
