--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   external_path: ^1.0.3
   flutter_local_notifications: ^15.1.0+1
   permission_handler: ^10.4.3
+  flutter_native_timezone: ^2.0.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
